feat: Finalizando implementação com alguns problemas.